crates/sui-rpc-api/tests/snapshots/ledger_history_pins__transactions__empty_cp_window_desc.snap
---
source: crates/sui-rpc-api/tests/ledger_history_pins.rs
expression: output
---
#0 no-item | wm.cursor=boundary(cp=2,tx=4) wm.cp=- | end=QUERY_END_REASON_CHECKPOINT_BOUND
