crates/sui-rpc-api/tests/snapshots/ledger_history_pins__transactions__end_lt_start.snap
---
source: crates/sui-rpc-api/tests/ledger_history_pins.rs
expression: output
---
INIT ERROR code=InvalidArgument msg="end_checkpoint must be greater than or equal to start_checkpoint"
