crates/sui-rpc-api/tests/snapshots/ledger_history_pins__transactions__window_after_collapse_asc.snap
---
source: crates/sui-rpc-api/tests/ledger_history_pins.rs
expression: output
---
#0 no-item | wm.cursor=boundary(cp=3,tx=4) wm.cp=- | end=QUERY_END_REASON_CURSOR_BOUND
